# qtstrava

./: CMakeLists.txt  qtstrava-cli.cpp  qtstrava.qrc
.github/workflows/: cmake.yml
examples/: CMakeLists.txt
examples/qtstrava-cli/: CMakeLists.txt
examples/qtstrava-cli/src/: authorizationhandler.cpp  authorizationhandler.h  main.cpp
include/QtStrava/: client.h  deserializererror.h  global.h  networkerror.h
include/QtStrava/Model/: detailedactivity.h  detailedathlete.h  error.h  fault.h  metaathlete.h  summaryactivity.h  summaryclub.h  summarygear.h  updatableactivity.h  upload.h
schemas/: DetailedActivity.schema.json  DetailedAthlete.schema.json  Fault.schema.json  SummaryActivity.schema.json  Upload.schema.json
src/: client.cpp  deserializererror.cpp  global.cpp  jsondeserializer.cpp  jsondeserializer_p.h  networkerror.cpp
src/Model/: detailedactivity.cpp  detailedathlete.cpp  error.cpp  fault.cpp  metaathlete.cpp  summaryactivity.cpp  summaryclub.cpp  summarygear.cpp  upload.cpp
tests/: CMakeLists.txt
tests/model/: CMakeLists.txt  tst_detailedactivity.cpp  tst_detailedactivity.qrc
tests/model/data/: DetailedActivity1.json  DetailedActivity2.json
tests/schemata/: CMakeLists.txt  tst_schemata.cpp
